--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -35,7 +35,14 @@
 
 /* General page layout */
 
-body {background:#cfd1c4; margin:0; padding:0; text-align:center;}
+body {
+    background:#cfd1c4;
+    margin:0;
+    padding:0;
+    text-align:center;
+    font-family:Comic Sans MS, cursive, sans-serif;
+    }
+
 body,td,input,textarea {font-size:12px; font-family:Verdana, Arial, Helvetica, sans-serif;}
 a:link,a:active,a:visited {text-decoration:none;}
 a:hover {text-decoration:underline;}
@@ -43,7 +50,18 @@ p {margin-top:0;}
 
 .qa-notice {background:#fdd; border-bottom:2px solid #293d39; color:#b00; font-size:18px; padding:.5em 32px; font-weight:bold; position:relative;}
 .qa-notice-close-button {font-family:"Arial Black"; color:#c00; font-size:20px; background:none; cursor:pointer; position:absolute; height:24px; border:none; top:4px; right:6px}
-.qa-body-wrapper {background:#fff; border:1px solid #293d39; width:980px; margin:0 auto; margin-top:-1px; text-align:left;}
+
+.qa-body-wrapper {
+    background:#fff; 
+    border: 2px solid #FAFAFA;
+    /* box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4); */
+    /* box-shadow: 10px 10px 5px rgba(34, 25, 25, 0.4), 10px 10px 5px rgba(34, 25, 25, 0.4); */
+    box-shadow: 12px 0 15px -4px rgba(34, 25, 25, 0.4), -12px 0 8px -4px rgba(34, 25, 25, 0.4);
+    width:980px; 
+    margin:0 auto;
+    margin-top:-1px;
+    text-align:left;
+    }
 
 /* Ajax loading spinner */
 
@@ -88,7 +106,18 @@ h2 {font-size:16px; padding-top:12px; clear:both;}
 .qa-sidebar {padding:12px; font-size:14px; background:#f5e4c3; border:1px solid #f3c772; margin:24px 0;}
 .qa-feed {background:url(feed-icon-14x14.png) no-repeat left top; padding-left:20px; height:16px; margin:24px 0;}
 .qa-feed-link {font-size:10px; color:#666;}
-.qa-main {padding-left:20px; float:left; margin-bottom:2em; width:750px; clear:left; overflow:hidden;}
+
+/* changes login window text & size */
+.qa-main {
+    padding-left:20px;
+    float:left;
+    margin-bottom:2em;
+    width:750px;
+    clear:left;
+    overflow:hidden;
+    text-align:center;
+    }
+
 .qa-main-hidden h1 {color:#999;}
 .qa-footer {clear:both; background:#293D39; color:#FFF; font-size:10px; padding:12px;}
 * html .qa-footer {padding-top:6px;} /* IE6 */
@@ -163,23 +192,92 @@ h2 {font-size:16px; padding-top:12px; clear:both;}
 
 /* Standard form (tall version) */
 
-.qa-form-tall-table {border:1px solid #658296; background-color:#d9e3ea; width:500px;}
+/*
+.qa-form-tall-table {
+    border:1px solid #658296;
+    background-color:#d9e3ea;
+    width:500px;
+    font-family:Comic Sans MS, cursive, sans-serif;
+    }
+*/
+
+.qa-form-tall-table {
+
+    background:#fff;
+    border: 2px solid #FAFAFA;
+    box-shadow: 5px 0 15px -4px rgba(34, 25, 25, 0.4), -5px 0 8px -4px rgba(34, 25, 25, 0.4);
+    width:350px;
+    margin:0 auto;
+    margin-top:-1px;
+    text-align:center;
+}
+
 .qa-form-tall-spacer {background:#E3F4FF; line-height:1px; padding:0; font-size:1px;}
 .qa-form-tall-ok {background:#efe; border:1px solid #090; color:#090; font-size:18px; padding:6px; text-align:center;}
-.qa-form-tall-label {color:#253845; padding:12px 8px 2px 8px; font-size:13px; font-weight:bold;}
-.qa-form-tall-data {padding:0px 8px 6px 8px; width:480px;}
-.qa-form-tall-text,.qa-form-tall-number {padding:3px;}
-.qa-form-tall-text {width:480px; border:1px solid #658296;}
-.qa-form-tall-number {width:48px; border:1px solid #658296;}
-.qa-form-tall-checkbox {float:left; margin-right:6px;}
-.qa-form-tall-image {text-align:center; margin-top:12px;}
-	.qa-form-tall-image img {border:1px solid #000;}
-.qa-form-tall-suffix {font-weight:normal; font-size:10px;}
-.qa-form-tall-error {background:#fee; border:1px solid #c00; color:#c00; font-size:14px; margin-top:6px; padding:.5em; display:inline-block;}
-.qa-form-tall-note {margin-top:6px;}
-	.qa-form-tall-note a {color:#293D39; text-decoration:underline;}
-	.qa-form-tall-note a:hover {color:#396E63;}
-.qa-form-tall-buttons {padding:8px; text-align:center;}
+
+.qa-form-tall-label {
+    color:#253845;
+    padding:12px 8px 2px 8px;
+    font-size:13px;
+    font-weight:bold;
+    font-family:Comic Sans MS, cursive, sans-serif;
+    }
+
+.qa-form-tall-data {
+    padding:0px 8px 6px 8px;
+    width:480px;
+    }
+
+.qa-form-tall-text,.qa-form-tall-number {
+    padding:3px;}
+
+/* changes login input window */
+.qa-form-tall-text {
+    width:250px; 
+    border:1px solid #658296;}
+
+.qa-form-tall-number {
+    width:48px; 
+    border:1px solid #658296;}
+
+.qa-form-tall-checkbox {
+    float:left; 
+    margin-right:6px;}
+
+.qa-form-tall-image {
+    text-align:center;
+    margin-top:12px;}
+
+.qa-form-tall-image img {
+    border:1px solid #000;}
+
+.qa-form-tall-suffix {
+    font-weight:normal;
+    font-size:10px;}
+
+.qa-form-tall-error {
+    background:#fee;
+    border:1px solid #c00;
+    color:#c00; 
+    font-size:14px;
+    margin-top:6px;
+    padding:.5em;
+    display:inline-block;}
+
+.qa-form-tall-note {
+    margin-top:6px;
+    font-family:Comic Sans MS, cursive, sans-serif;
+    }
+
+.qa-form-tall-note a {color:#293D39; text-decoration:underline;}
+
+.qa-form-tall-note a:hover {color:#396E63;}
+
+.qa-form-tall-buttons {
+    padding:8px;
+    text-align:center;
+    font-family:Comic Sans MS, cursive, sans-serif;
+    }
 
 /* Standard form (wide version) */
 
