--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -39,11 +39,12 @@ body {
     background:#cfd1c4;
     margin:0;
     padding:0;
-    text-align:center;
+    text-align:left;
     font-family:Comic Sans MS, cursive, sans-serif;
     }
 
-body,td,input,textarea {font-size:12px; font-family:Verdana, Arial, Helvetica, sans-serif;}
+body,td,input,textarea {font-size:12px; font-family:Comic Sans MS, cursive, sans-serif;}
+
 a:link,a:active,a:visited {text-decoration:none;}
 a:hover {text-decoration:underline;}
 p {margin-top:0;}
@@ -115,7 +116,7 @@ h2 {font-size:16px; padding-top:12px; clear:both;}
     width:750px;
     clear:left;
     overflow:hidden;
-    text-align:center;
+    text-align:left;
     }
 
 .qa-main-hidden h1 {color:#999;}
@@ -209,6 +210,7 @@ h2 {font-size:16px; padding-top:12px; clear:both;}
     border: 2px solid #FAFAFA;
     box-shadow: 5px 0 15px -4px rgba(34, 25, 25, 0.4), -5px 0 8px -4px rgba(34, 25, 25, 0.4);
     width:350px;
+    height:auto;
     margin:0 auto;
     margin-top:-1px;
     text-align:center;
