--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -146,8 +146,33 @@ h2 {font-size:16px; padding-top:12px; clear:both;}
 .qa-nav-user-link {color:#293d39;}
 .qa-logged-in {display:inline;}
 
-.qa-search {float:right; clear:right; margin-top:12px; white-space:nowrap;}
-.qa-search-field {width:12em; margin-right:2px;}
+.qa-search {
+    float:center;
+    clear:right;
+/*    margin-top:12px; */
+    white-space:nowrap;
+
+}
+
+.qa-search-field {
+
+margin:20px 1px 1px 200px;
+border-radius:5px;
+background: #FFFFFF;
+font-family:Comic Sans MS, cursive, sans-serif;
+height:27px;
+border:none;
+color:#9999;                       
+box-shadow:0 1px 2px rgba(34, 25, 25, 0.4);
+font-size:15px;
+-webkit-transition:0.5s ease;
+-moz-transition:0.5s ease;
+-o-transition:0.5s ease;
+-ms-transition:0.5s ease;
+transition:0.5s ease;
+
+    width:12em;
+    margin-right:2px;}
 
 /* Main, sub and category navigation */
 
