change color of tags & main menu tabs
Signed-off-by: Shivdas Gujare <shivdas.gujare@gmail.com>

--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -189,10 +189,10 @@ transition:0.5s ease;
 
 .qa-nav-main-item-opp {float:right; margin-left:4px;}
 
-.qa-nav-main-link {color:#FFF; display:block; padding:6px 10px; background:#0DD39D;}
+.qa-nav-main-link {color:#FFF; display:block; padding:6px 10px; background:#4D90FE;}
 
 /* .qa-nav-main-link:hover, .qa-nav-main-selected {background:#396e63; text-decoration:none;} */
-.qa-nav-main-link:hover, .qa-nav-main-selected {background:#2E64FE; text-decoration:none;}
+.qa-nav-main-link:hover, .qa-nav-main-selected {background:#0DD39D; text-decoration:none;}
 
 .qa-nav-main-hot .qa-nav-main-link {background:#f33;}
 .qa-nav-main-hot .qa-nav-main-link:hover, .qa-nav-main-hot .qa-nav-main-selected {background:#f66;}
@@ -360,9 +360,12 @@ transition:0.5s ease;
 .qa-q-item-who-title {font-size:80%; font-weight:bold; color:#900707;}
 .qa-q-item-points-data {font-weight:bold;}
 .qa-q-item-flags {background:#f00; color:#fff; font-weight:bold; padding:2px 5px; display:inline-block;}
+
+/* redesign tags*/
 .qa-q-item-tags {margin-top:8px;}
 .qa-q-item-tag-list {list-style:none; margin:0; padding:0;}
 .qa-q-item-tag-item {display:inline;}
+
 .qa-q-item-buttons {text-align:right; clear:both;}
 
 .qa-suggest-next {font-size:14px; padding:0.5em 0; text-align:left; clear:both;}
@@ -564,8 +567,12 @@ transition:0.5s ease;
 .qa-user-link {color:#FE642E; font-weight:bold;}
 
 .qa-category-link {color:#473A9F; font-weight:bold;}
-.qa-tag-link {font-size:11px; color:#FFF !important; font-weight:bold; padding:3px 5px; margin-bottom:3px; background-color:#658296; display:-moz-inline-stack; display:inline-block; vertical-align:middle; text-decoration:none !important;} /* inline-block for IE, -moz-inline-stack for early FF */
-	.qa-tag-link:hover {text-decoration:none; background-color:#235272;}
+
+.qa-tag-link {font-size:11px; color:#FFF !important; font-weight:bold; padding:3px 5px; margin-bottom:3px; background-color:#4D90FE; display:-moz-inline-stack; display:inline-block; vertical-align:middle; text-decoration:none !important;} /* inline-block for IE, -moz-inline-stack for early FF */
+
+/* .qa-tag-link {font-size:11px; color:#FFF !important; font-weight:bold; padding:3px 5px; margin-bottom:3px; background-color:#658296; display:-moz-inline-stack; display:inline-block; vertical-align:middle; text-decoration:none !important;} // inline-block for IE, -moz-inline-stack for early FF */
+
+	.qa-tag-link:hover {text-decoration:none; background-color:#0DD39D;}
 .qa-avatar-image {border:0; vertical-align:middle;}
 .qa-avatar-link,.qa-avatar-link:hover {text-decoration:none;}
 .qa-favorite-image {background:url(favorite-plus.gif) no-repeat; background-position: 0 -26px; border:0; margin:2px; height:26px; width:26px; vertical-align:middle; display:inline-block;}
