--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -352,8 +352,13 @@ transition:0.5s ease;
 
 .qa-q-list-item {margin-bottom:24px; padding-bottom:1px; zoom:1;} /* zoom for IE, padding for early FF */
 .qa-q-item-main {float:left; width:540px;}
-.qa-q-item-title {color:#235272; font-weight:bold; font-size:16px;}
-	.qa-q-item-title a {color:#235272;}
+
+/* remove bold - greenecosystem*/
+.qa-q-item-title {color:#235272; /* font-weight:bold;*/ font-size:16px;}
+
+.qa-q-item-title a {color:#000;}
+/* changed color - greenecosystem*/
+/*	.qa-q-item-title a {color:#235272;} */
 .qa-q-item-content {font-size:10px; margin-top:6px; max-height:64px; overflow-y:auto; padding:4px; border:1px solid #ccc;}
 .qa-q-item-avatar {display:inline-block; vertical-align:middle; margin-top:6px; margin-right:2px;}
 .qa-q-item-meta {display:inline-block; vertical-align:middle; margin-top:6px;}
@@ -565,9 +570,12 @@ transition:0.5s ease;
 /* Classes in HTML passed to theme class */
 
 /* .qa-user-link {color:#079075; font-weight:bold;} */
-.qa-user-link {color:#FE642E; font-weight:bold;}
+/* remove bold - greenecosyste,*/
+/* .qa-user-link {color:#FE642E; font-weight:bold;}
+.qa-category-link {color:#473A9F; font-weight:bold;} */
 
-.qa-category-link {color:#473A9F; font-weight:bold;}
+.qa-user-link {color:#FE642E;}
+.qa-category-link {color:#473A9F;}
 
 .qa-tag-link {font-size:11px; color:#FFF !important; font-weight:bold; padding:3px 5px; margin-bottom:3px; background-color:#4D90FE; display:-moz-inline-stack; display:inline-block; vertical-align:middle; text-decoration:none !important;} /* inline-block for IE, -moz-inline-stack for early FF */
 
