--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -246,11 +246,11 @@ transition:0.5s ease;
     background:#F2F2F2;
     border: 2px solid #FAFAFA;
     box-shadow: 5px 0 15px -4px rgba(34, 25, 25, 0.4), -5px 0 8px -4px rgba(34, 25, 25, 0.4);
-    width:350px;
+    width:750px;
     height:auto;
     margin:0 auto;
     margin-top:-1px;
-    text-align:center;
+    text-align:left;
 }
 
 .qa-form-tall-spacer {background:#E3F4FF; line-height:1px; padding:0; font-size:1px;}
