--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -296,7 +296,7 @@ transition:0.5s ease;
     margin-top:12px;}
 
 .qa-form-tall-image img {
-    border:1px solid #000;}
+    border:1px solid #FFF;}
 
 .qa-form-tall-suffix {
     font-weight:normal;
@@ -328,16 +328,48 @@ transition:0.5s ease;
 
 /* Standard form (wide version) */
 
-.qa-form-wide-table {border:1px solid #658296; background-color:#d9e3ea;}
+
+.qa-form-wide-table {
+/*    border:1px solid #658296;
+    background-color:#d9e3ea;*/
+    background:#fff; 
+    border: 2px solid #FAFAFA;
+    /* box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4); */
+    /* box-shadow: 10px 10px 5px rgba(34, 25, 25, 0.4), 10px 10px 5px rgba(34, 25, 25, 0.4); */
+    box-shadow: 12px 0 15px -4px rgba(34, 25, 25, 0.4), -12px 0 8px -4px rgba(34, 25, 25, 0.4);
+    width:400px; 
+    margin:0 auto;
+    margin-top:-1px;
+    text-align:left;
+
+}
+
 .qa-form-wide-spacer {background:#E3F4FF; line-height:1px; padding:0; font-size:1px;}
+
 .qa-form-wide-ok {background:#efe; border:1px solid #090; color:#090; font-size:16px; padding:6px; text-align:center;}
-.qa-form-wide-label {color:#253845; padding:6px 10px; font-size:13px; font-weight:bold; white-space: nowrap;}
-.qa-form-wide-data {padding:6px 10px;}
+
+.qa-form-wide-label {
+    color:#253845;
+    padding:6px 10px;
+    font-size:13px;
+    font-weight:bold;
+    white-space: nowrap;
+    text-align:right}
+
+.qa-form-wide-data {
+    padding:6px 10px;
+    text-align:left}
+
 .qa-form-wide-text,.qa-form-wide-number {padding:3px;}
+
 .qa-form-wide-text {width:320px; border:1px solid #658296;}
+
 .qa-form-wide-number {width:48px; border:1px solid #658296; vertical-align:middle;}
+
 .qa-form-wide-error {display:inline-block; background:#fee; border:1px solid #c00; color:#c00; font-size:11px; margin-left:6px; padding:.5em;}
+
 .qa-form-wide-note {font-size:10px; margin-left:4px;}
+
 .qa-form-wide-buttons {padding:8px; text-align:center;}
 
 /* Standard form (light version - buttons only) */
@@ -748,7 +780,14 @@ transition:0.5s ease;
 /* .qa-tag-link {font-size:11px; color:#FFF !important; font-weight:bold; padding:3px 5px; margin-bottom:3px; background-color:#658296; display:-moz-inline-stack; display:inline-block; vertical-align:middle; text-decoration:none !important;} // inline-block for IE, -moz-inline-stack for early FF */
 
 	.qa-tag-link:hover {text-decoration:none; background-color:#0DD39D;}
-.qa-avatar-image {border:0; vertical-align:middle;}
+
+.qa-avatar-image {
+    border:25px;
+    vertical-align:middle;
+    border-radius:110px;
+    height:70px;
+    width:70px;
+    box-shadow:1px 1px 3px #000 }
 .qa-avatar-link,.qa-avatar-link:hover {text-decoration:none;}
 
 .qa-favorite-image {
