changed text location of login window
Signed-off-by: Shivdas Gujare <shivdas.gujare@gmail.com>

--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -306,6 +306,7 @@ transition:0.5s ease;
 
 .qa-form-tall-checkbox {
     margin-right:6px;
+    margin-left:220px;
     text-align:center;
     }
 
