--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -307,7 +307,7 @@ transition:0.5s ease;
 
 /* changes login input window */
 .qa-form-tall-text {
-    width:290px; 
+    width:709px; 
     border:1px solid #658296;
 display:block;
 margin:0px auto 1px;
@@ -464,7 +464,7 @@ transition:0.5s ease;
     text-align:left;
     clear:both;}
 	.qa-suggest-next a {
-        border:1px solid #1f2e2b;
+        /* border:1px solid #1f2e2b; */
         color:#fff;
         padding:3px 6px;
         background:#0DD39D;
