--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -215,16 +215,16 @@ transition:0.5s ease;
 
 /*.qa-nav-main-item,.qa-nav-main-item-opp {border-top:1px solid #1f2e2b; border-left:1px solid #1f2e2b; border-right:1px solid #1f2e2b;} */
 
-.qa-nav-main-item {float:left; margin-right:1px;
+.qa-nav-main-item {float:left; margin-right:2px;
     box-shadow:0 1px 2px rgba(34, 25, 25, 0.4)
 }
 
 .qa-nav-main-item-opp {float:right; margin-left:4px;}
 
-.qa-nav-main-link {color:#FFF; display:block; padding:6px 10px; background:#4D90FE;}
+.qa-nav-main-link {color:#414141; display:block; padding:6px 10px; background:#C9E38B;}
 
 /* .qa-nav-main-link:hover, .qa-nav-main-selected {background:#396e63; text-decoration:none;} */
-.qa-nav-main-link:hover, .qa-nav-main-selected {background:#0DD39D; text-decoration:none;}
+.qa-nav-main-link:hover, .qa-nav-main-selected {color:#FFF; background:#76AF4C; text-decoration:none;}
 
 .qa-nav-main-hot .qa-nav-main-link {background:#f33;}
 .qa-nav-main-hot .qa-nav-main-link:hover, .qa-nav-main-hot .qa-nav-main-selected {background:#f66;}
