--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -363,6 +363,7 @@ transition:0.5s ease;
     color:#c00; 
     font-size:14px;
     margin-top:6px;
+    margin-left:240px;
     padding:.5em;
     display:inline-block;}
 
