--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -43,10 +43,44 @@ body {
     font-family:Comic Sans MS, cursive, sans-serif;
     }
 
+.input {
+    border:0; 
+    padding:10px; 
+    font-size:1.3em; 
+    color:#ccc; 
+    border:solid 1px #ccc; 
+    margin:0 0 20px; 
+    -moz-box-shadow: inset 0 0 4px rgba(0,0,0,0.2); 
+    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: inner 0 0 4px rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 3px; 
+    -moz-border-radius: 3px; 
+    border-radius: 3px;
+}
+
+input:focus { 
+    outline: none !important;
+    border:1px solid #4D90FE;
+    box-shadow: 0 0 10px #719ECE;
+}
+
+body,td,textarea {font-size:14px;
+    font-family:Comic Sans MS, cursive, sans-serif;
+    color:#545454;
+    }
+
+textarea:focus {
+    outline: none !important;
+    border:1px solid #4D90FE;
+    box-shadow: 0 0 10px #719ECE;
+}
+
+/*
 body,td,input,textarea {font-size:14px;
     font-family:Comic Sans MS, cursive, sans-serif;
     color:#545454;
     }
+*/
 
 a:link,a:active,a:visited {text-decoration:none;}
 a:hover {text-decoration:underline;}
