--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -278,7 +278,7 @@ transition:0.5s ease;
 .qa-nav-sub-item {float:left; margin-right:2px;margin-bottom:2px;}
 
 .qa-nav-sub-link {background:#A4A4A4; color:#FFF; font-weight:bold; padding:5px 8px; display:block;}
-.qa-nav-sub-link:hover, .qa-nav-sub-selected {background:#0DD39D; text-decoration:none;}
+.qa-nav-sub-link:hover, .qa-nav-sub-selected {background:#76AF4C; text-decoration:none;}
 .qa-nav-sub-link.qa-nav-selected {background:#0DD39D;}
 
 .qa-nav-cat {margin:24px 0;}
