--- a/qa-theme/gesdiscuss/qa-styles.css
+++ b/qa-theme/gesdiscuss/qa-styles.css
@@ -1005,9 +1005,9 @@ padding-left:18px;
     border:25px;
     vertical-align:middle;
     border-radius:110px;
-    height:70px;
-    width:70px;
-    box-shadow:1px 1px 3px #000 }
+    height:auto;
+    width:auto;
+    box-shadow:1px 1px 3px #4D90FE }
 .qa-avatar-link,.qa-avatar-link:hover {text-decoration:none;}
 
 .qa-favorite-image {
